# interview-bot

./: .env.example  .gitignore  README.md  chatbot.py  config.py  pyproject.toml  requirements.txt  test.py  utils.py
devtools/: lint.py
